atualizando versões dos projetos