@@ -2,6 +2,6 @@ package com.macedo.Customer.Exceptions;
 
 public class NotFoundException extends RuntimeException {
     public NotFoundException(String object) {
-        super("%s not found".formatted(object));
+        super(String.format("%s not found", object));
     }
 }
